--- a/config/i3/config
+++ b/config/i3/config
@@ -3,9 +3,11 @@
 # https://www.youtube.com/watch?v=XQcCywaD4y4
 #------------------------------ autostart ------------------------------
 
+# Wallpaper
 exec --no-startup-id feh --bg-fill ~/wallpapers/ubuntu_22-04.jpg
-#Polybar
-#exec_always --no-startup-id sh $HOME/.config/polybar/launch.sh
+
+# Polybar
+exec_always --no-startup-id sh $HOME/.config/polybar/launch.sh
 
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
@@ -13,7 +15,7 @@ exec --no-startup-id nm-applet
 # exec --no-startup-id picom --config ~/.config/picom/picom.conf 
 
 exec --no-startup-id sh ~/.config/i3/ibus.sh
-exec --no-startup-id volumeicon
+# exec --no-startup-id volumeicon
 
 #-----------------------------------------------------------------------
 
@@ -70,34 +72,34 @@ set $gruvbox-blue #458588
 set $gruvbox-purple #b16286
 set $gruvbox-aqua #689d68
 
-bar{
-    position top
-    status_command i3status
-    # status_command i3blocks 
-    font pango: RobotoMono Nerd Font 10
-    colors {
-            statusline $doom-fg
-            background $doom-bg
-			# <colorclass> 	<border> <background> <text>
-            # Solarized dark
-            # focused_workspace $based3 $based0 $base3
-            # inactive_workspace $based3 $based2 $base0
-            # active_workspace $based3 $based2 $base3
-            # urgent_workspace $based3 $magenta $base2
+# bar{
+#     position top
+#     status_command i3status
+#     # status_command i3blocks 
+#     font pango: RobotoMono Nerd Font 10
+#     colors {
+#             statusline $doom-fg
+#             background $doom-bg
+# 			# <colorclass> 	<border> <background> <text>
+#             # Solarized dark
+#             # focused_workspace $based3 $based0 $base3
+#             # inactive_workspace $based3 $based2 $base0
+#             # active_workspace $based3 $based2 $base3
+#             # urgent_workspace $based3 $magenta $base2
             
-            # Doom-one
-			focused_workspace $doom-base0 $doom-dark_blue $doom-base9
-			inactive_workspace $doom-base0 $doom-base1 $doom-base8
-			active_workspace $doom-base0 $doom-base1 $doom-base7
-			urgent_workspace $doom-base0 $doom-red $doom-base2
+#             # Doom-one
+# 			focused_workspace $doom-base0 $doom-dark_blue $doom-base9
+# 			inactive_workspace $doom-base0 $doom-base1 $doom-base8
+# 			active_workspace $doom-base0 $doom-base1 $doom-base7
+# 			urgent_workspace $doom-base0 $doom-red $doom-base2
 
-            # Gruvbox dark
-            # focused_workspace    $gruvbox-aqua      $gruvbox-aqua       $gruvbox-darkgray
-            # inactive_workspace   $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow
-            # active_workspace     $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow
-            # urgent_workspace     $gruvbox-red       $gruvbox-red $bg
-    }
-}
+#             # Gruvbox dark
+#             # focused_workspace    $gruvbox-aqua      $gruvbox-aqua       $gruvbox-darkgray
+#             # inactive_workspace   $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow
+#             # active_workspace     $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow
+#             # urgent_workspace     $gruvbox-red       $gruvbox-red $bg
+#     }
+# }
 
 # Window color settings
 # class                 border  backgr. text    indicator
@@ -135,7 +137,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Iosevka 8
+font pango:RobotoMono Nerd Font 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -162,8 +164,8 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Hide borders
 hide_edge_borders both
 # hide_edge_borders none
-for_window [class="^.*"] floating enable
-for_window [class="firefox"] resize set 1000px 700px
+for_window [class="Alacritty"] floating enable
+for_window [class="XTerm"] floating enable
 # for_window [class="Pavucontrol"] floating enable, resize set 600px 300px, move position 1000 20
 # default_border pixel 1
 
@@ -208,13 +210,19 @@ mode "resize" {
 }
 
 mode "volume"{
-        bindsym Up exec amixer -q -D pulse sset Master 10%+
-        bindsym Down exec amixer -q -D pulse sset Master 10%-
+        # bindsym Up exec amixer -q -D pulse sset Master 10%+
+        # bindsym Down exec amixer -q -D pulse sset Master 10%-
 
-        bindsym Ctrl+Up exec amixer -q -D pulse sset Master 1%+
-        bindsym Ctrl+Down exec amixer -q -D pulse sset Master 1%-
+        # bindsym Ctrl+Up exec amixer -q -D pulse sset Master 1%+
+        # bindsym Ctrl+Down exec amixer -q -D pulse sset Master 1%-
 
-        bindsym 0 exec amixer -q -D pulse sset Master 0
+        bindsym Up exec amixer set Master 5%+ -q 
+        bindsym Down exec amixer set Master 5%+ -q 
+
+        bindsym Ctrl+Up exec amixer set Master 1%+ -q 
+        bindsym Ctrl+Down exec amixer set Master 1%+ -q 
+
+        bindsym 0 exec amixer set Master 100%- -q 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -344,7 +352,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # bindsym $mod+r mode "resize"
 
-# bindsym $mod+p mode "volume"
+bindsym $mod+p mode "volume"
 
 bindsym $mod+Escape mode "$mode_system"
 
@@ -365,7 +373,7 @@ bindsym Print exec spectacle
 
 bindsym Ctrl+Shift+r exec rofi -show drun
 # bindsym Ctrl+r exec --no-startup-id dmenu_run
-bindsym Ctrl+w exec rofi -show window
+bindsym Mod1+w exec rofi -show window
 bindsym Ctrl+r exec dmenu_run
 
 #-----------------------------------------------------------------------
