--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -140,7 +140,7 @@ font-5 = "FontAwesome6Brands:size=14;4"
 ; modules-left = menu i3 RD dot LD mpd RD sep 
 modules-left = LD menu RD dot LD sway i3 bspwm RD
 modules-center = LD date RD
-modules-right = cpu dot memory dot memoryswap dot volume dot xkillapp dot sysmenu
+modules-right = cpu dot memory dot memoryswap dot volume dot xkillapp dot sysmenu dot
 
 # Alternate
 ;modules-left = openbox 2LD cpu 3LD memory 4LD filesystem 5LD
