--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -19,7 +19,7 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/polybar/nord.ini
+include-file = ~/.config/polybar/dracula.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/decor.ini
 include-file = ~/.config/polybar/system.ini
@@ -138,7 +138,7 @@ font-5 = "FontAwesome6Brands:size=14;4"
 
 # Default
 ; modules-left = menu i3 RD dot LD mpd RD sep 
-modules-left = LD menu RD dot LD sway i3 bspwm RD
+modules-left = LD menu RD dot LD i3 bspwm RD
 modules-center = LD date RD
 modules-right = cpu dot memory dot memoryswap dot volume dot xkillapp dot sysmenu dot
 
