--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -788,28 +788,28 @@ fuzzy-match = true
 
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
-; ws-icon-0 = 1;
-; ws-icon-1 = 2;
-; ws-icon-2 = 3;
-; ws-icon-3 = 4;
-; ws-icon-4 = 5;
-; ws-icon-5 = 6;漣
-; ws-icon-6 = 7;
-; ws-icon-7 = 8;
-; ws-icon-8 = 9;
-; ws-icon-9 = 10;ﳴ
-; ws-icon-default = 
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;漣
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-9 = 10;ﳴ
+ws-icon-default = 
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
+; ws-icon-0 = 1;
+; ws-icon-1 = 2;
+; ws-icon-2 = 3;
+; ws-icon-3 = 4;
+; ws-icon-4 = 5;
+; ws-icon-5 = 6;
+; ws-icon-6 = 7;
+; ws-icon-7 = 8;
+; ws-icon-8 = 9;
+; ws-icon-9 = 10;
 
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
@@ -826,7 +826,7 @@ format-background = ${color.BGL}
 label-mode = %mode%
 label-mode-padding = 1
 label-mode-background = ${color.YELLOW}
-label-mode-foreground = ${color.BGL}
+label-mode-foreground = ${color.BG}
 
 ; Available tokens:
 ;   %name%
@@ -834,8 +834,8 @@ label-mode-foreground = ${color.BGL}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-; label-focused = %icon%
-label-focused =  %name%
+label-focused = %icon%
+; label-focused =  %name%
 label-focused-foreground = ${color.BGL}
 label-focused-background = ${color.BLUE}
 
@@ -845,9 +845,9 @@ label-focused-background = ${color.BLUE}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-unfocused = %icon% %name%
+label-unfocused = %icon%
 label-unfocused-foreground = ${color.FG}
-label-unfocused-background = ${color.BGL}
+label-unfocused-background = ${color.BG}
 
 ; Available tokens:
 ;   %name%
@@ -855,7 +855,8 @@ label-unfocused-background = ${color.BGL}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-visible = %name%
+; label-visible = %name%
+label-visible = %icon%
 label-visible-foreground = ${color.BGL}
 label-visible-background = ${color.GREEN}
 
@@ -865,7 +866,7 @@ label-visible-background = ${color.GREEN}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-urgent = %name%
+label-urgent = %icon%
 label-urgent-foreground = ${color.BGL}
 label-urgent-background = ${color.RED}
 
@@ -879,7 +880,7 @@ label-urgent-padding = 1
 label-separator = |
 label-separator-padding = 0
 label-separator-foreground = ${color.BGL}
-label-separator-background = ${color.BGL}
+label-separator-background = ${color.BG}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
