--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -487,7 +487,7 @@ schemes:
 # *Palenight
 # *Zenburn
 # *Ubuntu
-colors: *Nord
+colors: *Dracula
 
 key_bindings:
     # (Windows, Linux, and BSD only)
