--- a/config/i3/config
+++ b/config/i3/config
@@ -19,8 +19,6 @@ exec --no-startup-id sh ~/.config/i3/ibus.sh
 
 #-----------------------------------------------------------------------
 
-
-
 #------------------------------ settings ------------------------------
 
 workspace_layout tabbed
@@ -28,112 +26,6 @@ workspace_layout tabbed
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 ## global color var
-# Solarized dark
-set $based3    #002b36
-set $based2    #073642
-set $based1    #586e75
-set $based0    #657b83
-set $base0     #839496
-set $base1     #93a1a1
-set $base2     #eee8d5
-set $base3     #fdf6e3
-set $yellow    #b58900
-set $orange    #cb4b16
-set $red       #dc322f
-set $magenta   #d33682
-set $violet    #6c71c4
-set $blue      #268bd2
-set $cyan      #2aa198
-set $green     #859900
-
-# Doom-one
-set $doom-bg #282c34
-set $doom-fg #51afef
-set $doom-dark_blue #2257A0
-set $doom-white #efefef
-set $doom-red #ff6c6b
-set $doom-base0      #1B2229
-set $doom-base1      #1c1f24
-set $doom-base2      #202328
-set $doom-base3      #23272e
-set $doom-base4      #3f444a
-set $doom-base5      #5B6268
-set $doom-base6      #73797e
-set $doom-base7      #9ca0a4
-set $doom-base8      #b1b1b1
-set $doom-base9      #E6E6E6
-
-# Gruvbox dark
-set $gruvbox-bg #282828
-set $gruvbox-red #cc241d
-set $gruvbox-green #98971a
-set $gruvbox-yellow #d79921
-set $gruvbox-blue #458588
-set $gruvbox-purple #b16286
-set $gruvbox-aqua #689d68
-
-# bar{
-#     position top
-#     status_command i3status
-#     # status_command i3blocks 
-#     font pango: RobotoMono Nerd Font 10
-#     colors {
-#             statusline $doom-fg
-#             background $doom-bg
-# 			# <colorclass> 	<border> <background> <text>
-#             # Solarized dark
-#             # focused_workspace $based3 $based0 $base3
-#             # inactive_workspace $based3 $based2 $base0
-#             # active_workspace $based3 $based2 $base3
-#             # urgent_workspace $based3 $magenta $base2
-            
-#             # Doom-one
-# 			focused_workspace $doom-base0 $doom-dark_blue $doom-base9
-# 			inactive_workspace $doom-base0 $doom-base1 $doom-base8
-# 			active_workspace $doom-base0 $doom-base1 $doom-base7
-# 			urgent_workspace $doom-base0 $doom-red $doom-base2
-
-#             # Gruvbox dark
-#             # focused_workspace    $gruvbox-aqua      $gruvbox-aqua       $gruvbox-darkgray
-#             # inactive_workspace   $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow
-#             # active_workspace     $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow
-#             # urgent_workspace     $gruvbox-red       $gruvbox-red $bg
-#     }
-# }
-
-# Window color settings
-# class                 border  backgr. text    indicator
-# Doom-one
-# client.focused          $doom-dark_blue  $doom-dark_blue $doom-white #81a1c1
-# client.unfocused        $doom-base3 $doom-base3 $doom-base9 $doom-base1
-# client.focused_inactive $doom-base3 $doom-base3 $doom-base9 $doom-base1
-# client.placeholder      $doom-base3 $doom-base3 $doom-base9 $doom-base1
-# client.urgent           $doom-red $doom-red $doom-white $doom-red
-
-# Window color settings
-# class                 border  backgr. text    indicator
-client.focused          #5e81ac #5e81ac #e5e9f0 #5e81ac 
-client.unfocused        #2e3440 #1f222d #888888 #1f222d
-client.focused_inactive #2e3440 #1f222d #888888 #1f222d
-client.placeholder      #2e3440 #1f222d #888888 #1f222d
-client.urgent           #900000 #900000 #ffffff #900000
-
-client.background       #242424
-
-# green gruvbox
-# class                 border|backgr|text|indicator|child_border
-#   client.focused          $gruvbox-green     $gruvbox-green      $gruvbox-darkgray $gruvbox-purple $gruvbox-darkgray
-#   client.focused_inactive $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow   $gruvbox-purple $gruvbox-darkgray
-#   client.unfocused        $gruvbox-darkgray  $gruvbox-darkgray   $gruvbox-yellow   $gruvbox-purple $gruvbox-darkgray
-#   client.urgent           $gruvbox-red       $gruvbox-red        $gruvbox-white    $gruvbox-red    $gruvbox-red
-
-# blue gruvbox
-# class                 border|backgr|text|indicator|child_border
-# client.focused          $gruvbox-blue       $gruvbox-blue       $gruvbox-darkgray   $gruvbox-purple $gruvbox-darkgray
-# client.focused_inactive $gruvbox-darkgray   $gruvbox-darkgray   $gruvbox-yellow     $gruvbox-purple $gruvbox-darkgray
-# client.unfocused        $gruvbox-darkgray   $gruvbox-darkgray   $gruvbox-yellow     $gruvbox-purple $gruvbox-darkgray
-# client.urgent           $gruvbox-red        $gruvbox-red        $gruvbox-white      $gruvbox-red    $gruvbox-red
-
 
 set $mod Mod4
 
@@ -181,208 +73,7 @@ for_window [class="XTerm"] floating enable
 
 #-----------------------------------------------------------------------
 
-
-
-
-
-#------------------------------ modes ----------------------------------
-
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        bindsym Shift+Left resize shrink width 20 px or 20 ppt
-        bindsym Shift+Down resize grow height 20 px or 20 ppt
-        bindsym Shift+Up resize shrink height 20 px or 20 ppt
-        bindsym Shift+Right resize grow width 20 px or 20 ppt
-
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-mode "volume"{
-        # bindsym Up exec amixer -q -D pulse sset Master 10%+
-        # bindsym Down exec amixer -q -D pulse sset Master 10%-
-
-        # bindsym Ctrl+Up exec amixer -q -D pulse sset Master 1%+
-        # bindsym Ctrl+Down exec amixer -q -D pulse sset Master 1%-
-
-        bindsym Up exec amixer set Master 5%+ -q 
-        bindsym Down exec amixer set Master 5%+ -q 
-
-        bindsym Ctrl+Up exec amixer set Master 1%+ -q 
-        bindsym Ctrl+Down exec amixer set Master 1%+ -q 
-
-        bindsym 0 exec amixer set Master 100%- -q 
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-set $Locker i3lock && sleep 1
-
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
-mode "$mode_system" {
-    bindsym l exec --no-startup-id $Locker, mode "default"
-    bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
-
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-#-----------------------------------------------------------------------
-
-
-
-#------------------------------ keymaps --------------------------------
-
-# start a terminal
-# bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec alacritty
-
-# kill focused window
-#bindsym $mod+Shift+q kill
-
-bindsym $mod+q kill
-
-# start dmenu (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
-
-# change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
-bindsym Ctrl+Right focus right
-bindsym Ctrl+Down focus down
-bindsym Ctrl+Up focus up
-bindsym Ctrl+Left focus left
-
-
-# move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
-bindsym $mod+h split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
-
-
-# switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# bindsym $mod+r mode "resize"
-
-bindsym $mod+p mode "volume"
-
-bindsym $mod+Escape mode "$mode_system"
-
-# bindsym $mod+Tab workspace next
-# bindsym $mod+Shift+Tab workspace prev
-
-bindsym Mod1+Tab workspace next
-bindsym Mod1+Shift+Tab workspace prev
-
-# Make the currently focused window a scratchpad
-bindsym Ctrl+q move scratchpad
-
-# Show the first scratchpad window
-bindsym Ctrl+s scratchpad show
-
-
-bindsym Print exec spectacle
-
-bindsym Ctrl+Shift+r exec rofi -show drun
-# bindsym Ctrl+r exec --no-startup-id dmenu_run
-bindsym Mod1+w exec rofi -show window
-bindsym Ctrl+r exec dmenu_run
-
-#-----------------------------------------------------------------------
-
+# include ~/.config/i3/settings/settings.conf
+include ~/.config/i3/settings/modes.conf
+include ~/.config/i3/settings/keymaps.conf
+include ~/.config/i3/themes/dracula.conf
