--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -40,22 +40,19 @@ set -g focus-events on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin "arcticicestudio/nord-tmux"
-# set -g @plugin 'dracula/tmux'
+# set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'dracula/tmux'
 
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, weather, time
-# set -g @dracula-plugins "cpu-usage ram-usage"
-
-# set -g @dracula-show-powerline true
-
+set -g @dracula-plugins "time weather"
+set -g @dracula-show-powerline true
 # set -g @dracula-show-left-sep 
 # set -g @dracula-show-right-sep 
-
-# set -g @dracula-show-flags true
-# set -g @dracula-refresh-rate 5
-# set -g @dracula-show-left-icon session
-# set -g @dracula-left-icon-padding 1
-# set -g @dracula-border-contrast true
+set -g @dracula-show-flags true
+set -g @dracula-refresh-rate 5
+set -g @dracula-show-left-icon session
+set -g @dracula-left-icon-padding 1
+set -g @dracula-border-contrast true
 
 run '~/.tmux/plugins/tpm/tpm'
 # set -g status-position bottom
