--- a/config/nvim-mini/coc-settings.json
+++ b/config/nvim-mini/coc-settings.json
@@ -1,38 +1,45 @@
 {
-	"signature.enable": true,
-	"signature.target": "echo",
-	"coc.source.file.ignoreHidden": false,
-	"clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/14.0.0/clangd_14.0.0/bin/clangd",
-	"colors.filetypes": [
-		"*"
-	],
-	"clangd.inlayHints.enable": false,
-	"suggest.completionItemKindLabels": {
-		"method": "  ",
-		"function": "  ",
-		"variable": "[]",
-		"field": "  ",
-		"typeParameter": "<>",
-		"constant": "  ",
-		"class": " פּ ",
-		"interface": " 蘒",
-		"struct": "  ",
-		"event": "  ",
-		"operator": "  ",
-		"module": "  ",
-		"property": "  ",
-		"enum": " 練",
-		"reference": "  ",
-		"keyword": "  ",
-		"file": "  ",
-		"folder": " ﱮ ",
-		"color": "  ",
-		"unit": " 塞 ",
-		"snippet": "  ",
-		"text": "  ",
-		"constructor": "  ",
-		"value": "  ",
-		"enumMember": "  "
-	},
-	"list.menuAction": true
+    "signature.enable": true,
+    "signature.target": "echo",
+    "coc.source.file.ignoreHidden": false,
+    "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/14.0.0/clangd_14.0.0/bin/clangd",
+    "colors.filetypes": [
+        "*"
+    ],
+    "clangd.inlayHints.enable": false,
+    "suggest.completionItemKindLabels": {
+        "method": "  ",
+        "function": "  ",
+        "variable": "[]",
+        "field": "  ",
+        "typeParameter": "<>",
+        "constant": "  ",
+        // "class": " פּ ",
+        "class": "  ",
+        "interface": " 蘒",
+        "struct": "  ",
+        "event": "  ",
+        "operator": "  ",
+        "module": "  ",
+        "property": "  ",
+        "enum": " 練",
+        "reference": "  ",
+        "keyword": "  ",
+        "file": "  ",
+        "folder": "  ",
+        "color": "  ",
+        "unit": " 塞 ",
+        // "snippet": "  ",
+        "snippet": "  ",
+        // "text": "  ",
+        "text": "  ",
+        "constructor": "  ",
+        "value": "  ",
+        "enumMember": "  "
+    },
+    "diagnostic.errorSign": "",
+    "diagnostic.warningSign": "",
+    "diagnostic.infoSign": "",
+    "diagnostic.hintSign": "",
+    "list.menuAction": true
 }
