--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -74,3 +74,5 @@ run '~/.tmux/plugins/tpm/tpm'
 
 #run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
 
+# NOTE: you can use vars with $<var> and ${<var>} as long as the str is double quoted: ""
+# WARNING: hex colors can't contain capital letters
