--- a/config/i3/config
+++ b/config/i3/config
@@ -4,14 +4,16 @@
 #------------------------------ autostart ------------------------------
 
 # Wallpaper
-exec --no-startup-id feh --bg-fill ~/wallpapers/nordic.jpg
+exec --no-startup-id feh --bg-fill ~/wallpapers/pacman-macchiato.png
 
 # Polybar
 exec_always --no-startup-id sh $HOME/.config/polybar/launch.sh
 
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+
 exec --no-startup-id nm-applet
+
 # exec --no-startup-id picom --config ~/.config/picom/picom.conf 
 
 exec --no-startup-id sh ~/.config/i3/ibus.sh
@@ -76,4 +78,4 @@ for_window [class="XTerm"] floating enable
 # include ~/.config/i3/settings/settings.conf
 include ~/.config/i3/settings/modes.conf
 include ~/.config/i3/settings/keymaps.conf
-include ~/.config/i3/themes/dracula.conf
+include ~/.config/i3/themes/macchiato.conf
