--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -1,6 +1,3 @@
-## Copyright (C) 2020-2021 Aditya Shakya <adi1090x@gmail.com>
-## Everyone is permitted to copy and distribute copies of this file under GNU-GPL3
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; Global WM Settings
@@ -19,7 +16,7 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/polybar/dracula.ini
+include-file = ~/.config/polybar/macchiato.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/decor.ini
 include-file = ~/.config/polybar/system.ini
