--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -712,7 +712,8 @@ content-background = ${color.BGL}
 
 [module/xkillapp]
 type = custom/text
-content = 
+; content = 
+content = 
 content-font = 2
 content-padding = 2
 click-left = sleep 0.5 && xkill > /dev/null 2>&1 &
@@ -881,6 +882,60 @@ label-separator = |
 label-separator-padding = 0
 label-separator-foreground = ${color.BGL}
 label-separator-background = ${color.BG}
+
+
+#################################################################
+
+[module/ewmh]
+type = internal/xworkspaces
+
+pin-workspaces = false
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+
+
+icon-0 = 1;
+icon-1 = 2;
+icon-2 = 3;
+icon-3 = 4;
+icon-4 = 5;
+icon-5 = 6;
+icon-6 = 7;
+icon-7 = 8;
+icon-8 = 9;
+icon-9 = 10;
+
+
+
+format = <label-state>
+label-monitor = %name%
+
+label-active = 
+label-active-foreground = ${colors.third}
+label-active-background = ${colors.background}
+label-active-underline= ${colors.foreground-alt}
+label-active-padding = 2
+
+label-occupied = 
+label-occupied-background = ${colors.background}
+label-occupied-foreground = ${colors.foreground}
+label-occupied-underline= ${colors.foreground}
+label-occupied-padding = 2
+
+label-urgent = 
+label-urgent-foreground = ${colors.alert}
+label-urgent-background = ${colors.background}
+label-urgent-underline = ${colors.alert}
+label-urgent-padding = 2
+
+
+label-empty = •
+label-empty-foreground = ${colors.foreground}
+label-empty-padding = 2
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
