--- a/config/i3/settings/keymaps.conf
+++ b/config/i3/settings/keymaps.conf
@@ -116,8 +116,7 @@ bindsym Mod1+Shift+Tab workspace prev
 bindsym Ctrl+q move scratchpad
 
 # Show the first scratchpad window
-bindsym Ctrl+s scratchpad show
-
+bindsym Mod1+s scratchpad show
 
 bindsym Print exec spectacle
 
