--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -2,5 +2,4 @@ default_linemode devicons
 
 set show_hidden true
 
-/* set preview_images true */
-set preview_images_method ueberzug
+set preview_images true
