--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,7 +32,7 @@ set -g history-limit 10000
 set -g default-terminal "xterm-256color"
 set -g terminal-overrides "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal 'screen-256color'
+# set -g default-terminal 'screen-256color'
 
 set -s escape-time 0
 set -g focus-events on
