--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -222,15 +222,27 @@ fuzzy-match = true
 ; ws-icon-9 = 10;ﳴ
 ; ws-icon-default = 
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
+ws-icon-0 = 1;•
+ws-icon-1 = 2;•
+ws-icon-2 = 3;•
+ws-icon-3 = 4;•
+ws-icon-4 = 5;•
+ws-icon-5 = 6;•
+ws-icon-6 = 7;•
+ws-icon-7 = 8;•
+ws-icon-8 = 9;•
+ws-icon-9 = 10;•
+ws-icon-default = 
+
+; ws-icon-0 = 1;
+; ws-icon-1 = 2;
+; ws-icon-2 = 3;
+; ws-icon-3 = 4;
+; ws-icon-4 = 5;
+; ws-icon-5 = 6;
+; ws-icon-6 = 7;
+; ws-icon-7 = 8;
+; ws-icon-8 = 9;
 
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
@@ -256,9 +268,12 @@ label-mode-foreground = ${color.BGL}
 ;   %output%
 ; Default: %icon%  %name%
 ; label-focused = %icon%
-label-focused =  %name%
-label-focused-foreground = ${color.BGL}
-label-focused-background = ${color.BLUE}
+label-focused =  %name%
+; label-focused-foreground = ${color.BGL}
+; label-focused-background = ${color.BLUE}
+
+label-focused-foreground = ${color.BLUE}
+label-focused-background = ${color.BGL}
 
 ; Available tokens:
 ;   %name%
@@ -267,7 +282,10 @@ label-focused-background = ${color.BLUE}
 ;   %output%
 ; Default: %icon%  %name%
 label-unfocused = %icon% %name%
-label-unfocused-foreground = ${color.FG}
+; label-unfocused-foreground = ${color.FG}
+; label-unfocused-background = ${color.BGL}
+
+label-unfocused-foreground = ${color.BLUE}
 label-unfocused-background = ${color.BGL}
 
 ; Available tokens:
@@ -286,7 +304,7 @@ label-visible-background = ${color.GREEN}
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-urgent = %name%
+label-urgent = %icon%
 label-urgent-foreground = ${color.BGL}
 label-urgent-background = ${color.RED}
 
